--- a/inflation_persist_program.ipynb
+++ b/inflation_persist_program.ipynb
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b027f7",
+   "id": "5766b42a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,11 +62,25 @@
     "    pit2a = [0;(1/l1).^(tim(2:end)-1)]*(1-rho/l1);\n",
     "    \n",
     "    pt2a = cumsum(pit2a);\n",
-    "end;\n",
-    "\n",
+    "end;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b744f727",
+   "metadata": {},
+   "source": [
     "% calculate and plot response to fiscal shock with fixed interest rate\n",
-    "% I retained individual plots. Below is the two panel plot used in JEP\n",
-    "\n",
+    "% I retained individual plots. Below is the two panel plot used in JEP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87b027f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "shock = [1 0]'; \n",
     "thpi1 = 0; \n",
     "[xt pit vt qt it rnt pt] = solveit(sig,kap, bet, thpi1, thx,eta, rho, omeg,T,shock);\n",
