--- a/inflation_persist_program.ipynb
+++ b/inflation_persist_program.ipynb
@@ -643,9 +643,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "display_name": "MATLAB Kernel",
+   "language": "matlab",
+   "name": "jupyter_matlab_kernel"
   },
   "language_info": {
    "codemirror_mode": {
@@ -654,7 +654,7 @@
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
+   "name": "matlab",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.13.2"
